[package]
name = "imgproc"
version = "0.1.0"
authors = ["Lorenzo (Mec-iS) <tunedconsulting@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rs_imgproc"
crate-type = ["cdylib"]

[dependencies]
image = "0.23.1"


